samples/_failures_safe/1761518624_773045_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_256b38bc.c: In function ‘main’:
./samples/SAFE/__tmp_256b38bc.c:143:5: error: expected expression at end of input
  143 |     addEdge(graph, 1,
      |     ^~~~~~~
./samples/SAFE/__tmp_256b38bc.c:143:5: error: too few arguments to function ‘addEdge’
./samples/SAFE/__tmp_256b38bc.c:38:6: note: declared here
   38 | void addEdge(struct Graph* graph, int src, int dest, int weight) {
      |      ^~~~~~~
./samples/SAFE/__tmp_256b38bc.c:143:5: error: expected declaration or statement at end of input
  143 |     addEdge(graph, 1,
      |     ^~~~~~~
